src/grammar.txt
%token ID, NUMBER
%token LPAREN, RPAREN, COMMA, SEMICOLON
%token PLUS, MINUS, TIMES, DIVIDE, CARAT, EQUAL
%token EQ, NEQ, LTE, LT, GTE, GT
%token PRINT, PLOT, SOLVE, IN
%token REAL, RATIONAL, INTEGER


prog           : stmts

stmts          : stmt_semicolon
               | stmts stmt_semicolon

stmt_semicolon : stmt SEMICOLON

stmt           : assignment
               | print_stmt
               | plot_stmt

assignment     : ID EQUAL expr

print_stmt     : PRINT expr
               | print_stmt COMMA expr

plot_stmt      : PLOT expr
               | plot_stmt COMMA expr

expr           : m_expr
               | solve_expr

m_expr         : sum
               | m_expr EQ sum
               | m_expr NEQ sum
               | m_expr LTE sum
               | m_expr LT sum
               | m_expr GTE sum
               | m_expr GT sum

solve_expr     : SOLVE ID IN set

set            : REAL
               | RATIONAL
               | INTEGER

sum            : term
               | sum PLUS term
               | sum MINUS term

term           : factor
               | term TIMES factor
               | term DIVIDE factor

factor         : power
               | PLUS factor
               | MINUS factor

power          : primary CARAT factor
               | primary

primary        : atom
               | func_eval

atom           : NUMBER
               | ID
               | group

func_eval      : ID group

group          : LPAREN expr RPAREN
